---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: ????
  Info:
    - Update description and dependencies
    - Rename simple entity
    - Remove stray example code
    - Add crafter, item, recipe & technology
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2025. 02. 21
  Info:
    - Stash proof of concept
    - Test with a single large cover
    - Nullify asteroid damage via script
    - Revert to per-tile covers to keep collision debug renderer clean
    - Add the cover to newly placed tiles
    - Find entities filtered does not work for entities without a collision box
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 02. 19
  Info:
    - Initial commit