@@ -7,3 +7,6 @@ shield-generator--simple-entity=Has an invisible hitbox, protects tile from aste
 
 [technology-name]
 shield-generator=Shield generator
+
+[recipe-name]
+shield-generator--shield=Shield generator's shield
